--- a/css/style.css
+++ b/css/style.css
@@ -123,16 +123,17 @@ header{
 .business-plan-row{
     display: flex;
     column-gap: 10px;
-    row-gap: 20px;
+    row-gap: 30px;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 2em;
 }
 
 .business-plan-col{
     width: calc(100% / 3 - 20px);
 
     /* DEBUG */
-    min-height: 500px;
+    min-height: 700px;
     background-color: burlywood;
     border: 2px solid black;
 }
@@ -141,7 +142,74 @@ header{
     width: 100%;
 
     /* DEBUG */
-    min-height: 200px;
+    min-height: 300px;
 
+}
+
+/* SECTION PARTNER */
+
+.partner-container{
+    display: flex;
+    flex-direction: row;
+    margin-top: 8em;
+
+    /* DEBUG */
+    min-height: 400px;
+}
+
+.partner-img{
+    width: 60%;
+    background-color: chartreuse;
+}
+
+.partner-txt{
+    width: 40%;
+    background-color: darkgoldenrod;
+}
+
+/* SECTION OPERATIONS */
+
+.operations{
+    margin-top: 3em;
+    text-align: center;
+}
+
+.operations-row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 3em;
+    justify-content: space-between;
+}
+
+.operations-col{
+    width: calc(100% / 3 - 15px);
+}
+
+.operations-col-img{
+
+    /* DEBUG */
+    min-height: 300px;
+    background-color: fuchsia;
+    border: 2px solid greenyellow;
+    line-height: 300px;
+}
+
+.operations-col-txt{
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+.operations-col-txt h3{
+    margin-bottom: 1em;
+}
+
+.operations-subtitle{
+    text-align: left;
+    margin-top: 6em;
+    margin-bottom: 6em;
+}
+
+.operations-subtitle h3{
+    margin-bottom: 3em;
 }
 
