--- a/css/style.css
+++ b/css/style.css
@@ -213,3 +213,38 @@ header{
     margin-bottom: 3em;
 }
 
+/* SECTION COMPANIES */
+
+.companies{
+    width: 100%;
+    display: flex;
+
+    /* DEBUG */
+    min-height: 600px;
+    background-color: #f5f5f5;
+}
+
+.big-square{
+    width: calc(100% / 3);
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+    /* DEBUG */
+    border: 2px solid black;
+}
+
+.company{
+    width: 50%;
+
+    /* DEBUG */
+    min-height: 300px;
+    background-color: violet;
+    border: 2px dashed orange;
+}
+
+.big-square h2{
+    padding: 2em 2em;
+    margin-bottom: .5em;
+    border-bottom: 2px solid green;
+}
