--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,11 @@ header{
 }
 
 .big-square h2{
-    padding: 2em 2em;
-    margin-bottom: .5em;
-    border-bottom: 2px solid green;
+    /* border-bottom: 2px solid green; */
+    /* height: 25%; */
+    display: block;
+}
+
+.center{
+
 }
