ritocco buttons e fine faq section

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,12 @@ ul li{
     list-style-type: none;
 }
 
+a.btn{
+    text-decoration: none;
+}
+
 .btn{
+    display: inline-block;
     background-color: #0061ff;
     color: white;
     border: none;
@@ -107,7 +112,8 @@ header a{
 }
 
 header .btn{
-    vertical-align: text-top;
+    text-align: center;
+    display: inline;
 }
 
 /* MAIN */
@@ -154,8 +160,9 @@ header .btn{
 }
 
 .col-text .btn{
+    text-align: center;
     font-size: 1em;
-    padding: .8em;
+    padding: .8em .4em;
 }
 
 .col-text i{
@@ -182,8 +189,13 @@ header .btn{
     font-size: 2.5rem;
 }
 
-.mini-title input{
-    margin-right: .2em;
+.business-plan-col a.btn{
+    text-decoration: none;
+    margin: 2em 0;
+}
+
+.link{
+    color: blue;
 }
 
 .second-radio{
@@ -199,16 +211,13 @@ header .btn{
     margin-top: 2em;
 }
 
-/* .business-plan-col span{
-    border-bottom: 1px solid grey;
-} */
 
 .business-plan-col{
     width: calc(100% / 3 - 20px);
+    border: 1px solid grey;
 
     /* DEBUG */
     min-height: 900px;
-    border: 1px solid grey;
 }
 
 .business-plan-col-inner{
@@ -277,7 +286,7 @@ header .btn{
 .partner-container{
     display: flex;
     flex-direction: row;
-    margin: 8em 0;
+    margin: 6em 0;
 
     /* DEBUG */
     min-height: 400px;
@@ -288,6 +297,8 @@ header .btn{
     background-color: white;
     color: grey;
     border: 1px solid grey;
+    text-decoration: none;
+    display: inline-block;
 }
 
 .grey-btn:hover{
@@ -483,32 +494,45 @@ header .btn{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
     height: 300px;
     margin-bottom: 3em;
 }
 
 .free-trial-text, .free-trial-btn{
-    width: 50%;
-    vertical-align: middle;
-    /* margin-top: 6em; */
-
-    
+    width: 50%;    
 }
 
 .free-trial-btn{
     text-align: center;
-    line-height: 300px;
+    align-items: center;
+
 }
 
-.free-trial-btn input{
+.free-trial-btn a{
     font-size: 1em;
     border: none;
     padding: 1em 3em;
+    text-decoration: none;
+    color: black;
+}
+
+.btn-grey{
+    display: inline-block;
     background-color: #ffffff;
+    color: black;
+    border: none;
+    padding: .4em .8em;
+
+}
+
+.btn-grey:hover{
+    background-color: #ffffffbb;
 }
 
 .free-trial-btn input:hover{
-    background-color: rgba(255, 255, 255, 0.856);
+    background-color: rgba(128, 128, 128, 0.774);
 }
 
 .free-trial-text{
@@ -549,10 +573,16 @@ header .btn{
 
 .faq-small-container p{
     display: none;
+    margin: 1em 0 .5em;
+    width: 90%;
 }
 
-.faq-small-container i:active{
+.faq-small-container li:hover i{
     transform: rotate(180deg);
+}
+
+.faq-small-container li:hover p{
+    display: inline-block;
 }
 
 .faq ul:last-child{
@@ -588,9 +618,15 @@ footer{
 }
 
 footer h4{
+    font-size: 1.5em;
     margin: 2em 0;
 }
 
 footer ul li{
     list-style-type: none;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
 }
